@@ -142,7 +142,7 @@ def execute(args, parser):
     common.check_specs(prefix, specs)
 
     common.ensure_override_channels_requires_channel(args)
-    channel_urls = args.channel or ()    
+    channel_urls = args.channel or ()
     index = get_index(channel_urls=channel_urls,
                       prepend=not args.override_channels)
     actions = plan.install_actions(prefix, index, specs)
